force-app/main/default/objects/EI_Prem_Char__c/EI_Prem_Char__c.object-meta.xml
<CustomObject>
    <description>Premise level characteristics data, submetered related unit totals, TTL-UNIT,G-TTLUNT,CAREUNIT,GCAREUNT,FERAUNIT</description>
    <label>EI Prem Char</label>
    <nameField>
        <displayFormat>PREMCHAR{0000000000}</displayFormat>
        <label>NAME (Sequence No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EI Prem Char</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>