force-app/main/default/objects/EI_Prem_Char__c/fields/EFFDT__c.field-meta.xml
<CustomField>
    <fullName>EFFDT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFFDT</label>
    <type>Date</type>
</CustomField>