force-app/main/default/objects/EI_Prem_Char__c/fields/PREMISE__c.field-meta.xml
<CustomField>
    <fullName>PREMISE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREMISE</label>
    <referenceTo>EI_PREMISE__c</referenceTo>
    <relationshipLabel>EI Prem Char</relationshipLabel>
    <relationshipName>EI_Prem_Char</relationshipName>
    <type>Lookup</type>
</CustomField>