force-app/main/default/objects/EI_Prem_Char__c/fields/VERSION__c.field-meta.xml
<CustomField>
    <fullName>VERSION__c</fullName>
    <label>VERSION</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>